--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li class="active"><a href="#">Home</a><span></span></li>
                     <li><a href="#about">About</a><span></span></li>
-                    <li><a href="#">Services</a><span></span></li>
+                    <li><a href="#services">Services</a><span></span></li>
                     <li><a href="#">Pricing</a><span></span></li>
                     <li><a href="#contact">Contact</a><span></span></li>
                 </ul>
